--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,34 @@
 image: "rust:latest"
 
-.run_test: &run_test
+test:
+  stage: test
   script:
-    - if [ "x$DISABLE_CACHE" != "xtrue" ]; then
+    # ツールのインストール
+    - rustup toolchain install "$RUST_VERSION" --component rustfmt clippy
+    - rustup install nightly
+    - rustup default "$RUST_VERSION"
+    # キャッシュの設定
+    - if [ "${DISABLE_CACHE:-false}" = "false" ]; then
     -     export CARGO_HOME="$CI_PROJECT_DIR/cargo"
     -     mkdir -p $CARGO_HOME target_cache
     -     ln -s /usr/local/cargo/bin $CARGO_HOME/bin
     -     ln -s /usr/local/cargo/env $CARGO_HOME/env
     -     ln -s target_cache target
     - fi
-    - rustup update
-    - rustup component add rustfmt clippy
-    - rustup --version && rustc --version && cargo --version
-    - time cargo fetch
-    - cargo fmt --all --verbose -- --check
-    - cargo test --workspace
-    - cargo clippy --workspace --all-targets --all-features -- -D warnings
-    - cargo test --workspace --all-targets
+    # 現在のversionの表示
+    - rustup --version && cargo --version
+    # Cargo.lock の更新
+    - if [ "${USE_MINIMAL_VERSIONS:-false}" = "false" ]; then
+    -     time cargo +nightly update
+    - else
+    -     time cargo +nightly update -Z minimal-versions
+    - fi
+    - cargo fetch # ソースコードのダウンロード
+    - cargo fmt --all --check --verbose # フォーマットチェック
+    - cargo clippy --workspace --all-targets $FEATURES -- -D warnings
+    # テストを実行し結果をJUnit形式で出力
+    - cargo test --lib --workspace $FEATURES -- -Z unstable-options --format=junit --report-time > lib.xml
+    - cargo test --doc --workspace $FEATURES -- -Z unstable-options --format=junit --report-time > doc.xml
   cache:
     - key: "crates.io"
       paths:
@@ -27,19 +39,27 @@ image: "rust:latest"
     - key: "target"
       paths:
         - target_cache/
-
-# Use cargo to test the project
-test:stable:
-  <<: *run_test
-  before_script:
-    - rustup default stable
-
-test:beta:
-  <<: *run_test
-  before_script:
-    - rustup default beta
-
-test:msrv:
-  <<: *run_test
-  before_script:
-    - rustup default 1.54.0
+  artifacts:
+    when: always
+    paths:
+      - lib.xml
+      - doc.xml
+    reports:
+      junit:
+        - lib.xml
+        - doc.xml
+  variables:
+    CARGO_UNSTABLE_SPARSE_REGISTRY: "true"
+    CARGO_LOG: "cargo::sources::registry::http_remote=debug"
+  parallel:
+    matrix:
+      - RUST_VERSION:
+        - "stable"
+        - "beta"
+        - "1.54.0" # MSRV
+        USE_MINIMAL_VERSIONS:
+        - "false"
+        - "true"
+        FEATURES:
+        - "--no-default-features"
+        - "--all-features"
