--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "auto-impl-ops"
-version = "0.1.2"
+version = "0.1.3-beta"
 authors = ["Toru3 <ryuutet@gmail.com>"]
 edition = "2018"
 description = "semi-automatic implementation proc-macro for binary operations"
