--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ test:
     - cargo clippy --workspace --all-targets $FEATURES -- -D warnings
     # テストを実行し結果をJUnit形式で出力
     - cargo test --lib --workspace $FEATURES -- -Z unstable-options --format=junit --report-time > lib.xml
+    - cargo test --doc --workspace $FEATURES -- -Z unstable-options --format=junit --report-time > lib.xml
+    - cargo test --examples --workspace $FEATURES -- -Z unstable-options --format=junit --report-time > lib.xml
   cache:
     - key: "rustup-$RUST_VERSION"
       paths:
