Revert "update ci"
This reverts commit 38030660618d2c8581239929aa31de0108c69163.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: "rustlang/rust:nightly"
+image: "rust:latest"
 
 test:
   stage: test
@@ -14,6 +14,7 @@ test:
     - fi
     # ツールのインストール
     - rustup toolchain install "$RUST_VERSION" --component rustfmt clippy
+    - rustup install nightly
     - rustup default "$RUST_VERSION"
     # 現在のversionの表示
     - rustup --version && cargo --version
