--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: "rust:latest"
+image: "toru3/rust:latest"
 
 test:
   stage: test
@@ -6,8 +6,7 @@ test:
     # キャッシュの設定
     - if [ "${DISABLE_CACHE:-false}" = "false" ]; then
     -     export CARGO_HOME="$CI_PROJECT_DIR/cargo"
-    -     export RUSTUP_HOME="$CI_PROJECT_DIR/rustup"
-    -     mkdir -p "$CARGO_HOME" "$RUSTUP_HOME"
+    -     mkdir -p "$CARGO_HOME"
     -     ln -s /usr/local/cargo/bin $CARGO_HOME/bin
     -     ln -s /usr/local/cargo/env $CARGO_HOME/env
     - fi
@@ -31,17 +30,6 @@ test:
     - cargo test --doc --workspace $FEATURES -- -Z unstable-options --format=junit --report-time > doc.xml
     - cargo test --examples --workspace $FEATURES -- -Z unstable-options --format=junit --report-time > example.xml
   cache:
-    - key: "rustup-settings"
-      paths:
-        - "rustup/settings.toml"
-    - key: "rustup-nightly"
-      paths:
-        - "rustup/toolchains/nightly-x86_64-unknown-linux-gnu/"
-        - "rustup/update-hashes/nightly-x86_64-unknown-linux-gnu"
-    - key: "rustup-$RUST_VERSION"
-      paths:
-        - "rustup/toolchains/$RUST_VERSION-x86_64-unknown-linux-gnu/"
-        - "rustup/update-hashes/$RUST_VERSION-x86_64-unknown-linux-gnu"
     - key: "crates-$USE_MINIMAL_VERSIONS"
       paths:
         - cargo/registry/index/
