--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,5 @@ take_mut = { version = "0.2.2", optional = true }
 
 [dev-dependencies]
 num-traits = "0.2.15"
-pretty_assertions = "1.3.0"
-prettyplease = "0.1.23, <0.1.41"
+pretty_assertions = "1.3.0, <1.4.1"
+prettyplease = "0.1.23"
