--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,8 @@ test:
         - cargo/git/db/
   variables:
     CARGO_UNSTABLE_SPARSE_REGISTRY: "true"
+    CARGO_REGISTRIES_CRATES_IO_PROTOCOL: "sparse"
+    CARGO_RESOLVER_INCOMPATIBLE_RUST_VERSIONS: "fallback"
   parallel:
     matrix:
       - RUST_VERSION:
